Fix spacing between publish icon and publish text (#1573)
* Update userbar.less

* Update userbar.html

--- a/public/resources/stylesheets/userbar.less
+++ b/public/resources/stylesheets/userbar.less
@@ -186,6 +186,7 @@ body {
       vertical-align: middle;
       position: relative;
       top: -2px;
+      margin-right: 4px;
     }
 
     &:hover {
